[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Part.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 500, 200 )

[node name="Part" type="Area2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Enemies" type="Node2D" parent="."]

[connection signal="body_entered" from="." to="." method="_on_Part_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Part_body_exited"]
